tests/baselines/reference/extendsClause.errors.txt
index.ts(9,17): error TS1361: 'C' cannot be used as a value because it was imported using 'import type'.
index.ts(10,17): error TS1361: 'types' cannot be used as a value because it was imported using 'import type'.


==== types.ts (0 errors) ====
    export interface I {}
    export class C {}
    
==== ns.ts (0 errors) ====
    import type * as types from './types';
    export { types };
    
==== index.ts (2 errors) ====
    import { types } from './ns';
    import type { C, I } from './types';
    
    interface Q extends C {}
    interface R extends I {}
    interface S extends types.C {}
    interface T extends types.I {}
    
    class U extends C {} // Error
                    ~
!!! error TS1361: 'C' cannot be used as a value because it was imported using 'import type'.
!!! related TS1376 index.ts:2:15: 'C' was imported here.
    class V extends types.C {} // Error
                    ~~~~~
!!! error TS1361: 'types' cannot be used as a value because it was imported using 'import type'.
!!! related TS1376 ns.ts:1:18: 'types' was imported here.
    